Base ejecucion cucumber